crates/biome_cli/tests/snapshots/main_cases_assist/assist_emit_diagnostic_but_doesnt_block.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --enforce-assist=false file.json
```

## `biome.json`

```json
{
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "useSortedKeys": "on"
      }
    }
  },
  "formatter": { "enabled": false }
}
```

## `file.json`

```json
{ "zod": true, "lorem": "ipsum", "foo": "bar" }
```

# Emitted Messages

```block
file.json:1:1 assist/source/useSortedKeys  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The members are not sorted by key.
  
  > 1 │ { "zod": true, "lorem": "ipsum", "foo": "bar" }
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Sort the members by key.
  
  - {·"zod":·true,·"lorem":·"ipsum",·"foo":·"bar"·}
  + {·"foo":·"bar","lorem":·"ipsum",·"zod":·true·}
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
