crates/biome_cli/tests/snapshots/main_cases_assist/assist_writes.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write file.json
```

## `biome.json`

```json
{
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "useSortedKeys": "on"
      }
    }
  },
  "formatter": { "enabled": false }
}
```

## `file.json`

```json
{ "foo": "bar","lorem": "ipsum", "zod": true }
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
